# simvue-cli

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Coverage.md  README.md  pyproject.toml  simvue.ini
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: deploy.yaml  test_cli.yaml  test_cli_macos.yaml  test_cli_macos_nightlies.yaml  test_cli_ubuntu.yaml  test_cli_ubuntu_nightlies.yaml  test_cli_windows.yaml  test_cli_windows_nightlies.yaml
deploy/: simvue_cli.spec
simvue_cli/: actions.py  cli.py  config.py  run.py  server.py  types.py  validation.py
simvue_cli/cli/: __init__.py  display.py
src/simvue_cli/: actions.py  config.py  plot.py  server.py  tree.py  validation.py
src/simvue_cli/cli/: __init__.py  alert.py  artifact.py  config.py  display.py  folder.py  monitor.py  push.py  run.py  storage.py  tag.py  utilities.py  venv.py
src/simvue_cli/cli/admin/: __init__.py  tenant.py  user.py
src/simvue_cli/push/: __init__.py  core.py  delimited.py  json.py  validate.py
src/simvue_cli/session/: config.py  exception.py  workflow.py
src/simvue_cli/session/config/: parsing.py  schema.py
src/simvue_cli/session/config/parsing/: __init__.py  base.py  csv.py  generic.py  json.py
tests/: conftest.py  test_command_line_interface.py  test_workflow.py
tests/data/: metadata_100.csv  metadata_100.json  nosimvue_session.yml  out.csv  runs_100.json  sample_data.csv  session.yml  simvue_session.yml
tests/unit/: test_cli_actions.py  test_parsing.py
