[project]
name = "simvue-cli"
version = "1.0.0"
description = "Command Line Interface for interaction with a Simvue v3 server"
authors = [
    {name = "Kristian Zarębski",email = "kristian.zarebski@ukaea.uk"}
]
license-files = ["LICENSE"]
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
    "click-option-group>=0.5.7",
    "click>=8.1.8",
    "simvue>=2.1.0",
    "click-log>=0.4.0",
    "click-params>=0.5.0",
    "toml>=0.10.2",
    "tabulate>=0.9.0",
    "regex>=2024.11.6",
    "requests>=2.32.3",
]

[project.scripts]
simvue = "simvue_cli.cli:simvue"

[tool.ruff]
lint.extend-select = ["C901", "T201"]
lint.mccabe.max-complexity = 11
extend-exclude = ["tests"]

[tool.pytest.ini_options]
addopts = "--no-cov"
testpaths = [
    "tests"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest-cov>=6.0.0",
    "pytest>=8.3.5",
]
lint = [
    "ruff>=0.11.2",
]
