[project]
name = "simvue-cli"
version = "1.2.2"
description = "Command Line Interface for interaction with a Simvue v3 server"
authors = [
    {name = "Simvue Development Team", email = "info@simvue.io"}
]
license-files = ["LICENSE"]
readme = "README.md"
requires-python = ">=3.10,<3.15"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Operating System :: Unix",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering",
    "Topic :: System :: Monitoring",
    "Topic :: Utilities",
    "Typing :: Typed"
]
keywords = [
    "tracking",
    "monitoring",
    "metrics",
    "alerting",
    "metrics-gathering"
]
dependencies = [
    "click-option-group>=0.5.7",
    "click>=8.1.8",
    "click-log>=0.4.0",
    "click-params>=0.5.0",
    "toml>=0.10.2",
    "tabulate>=0.9.0",
    "regex>=2024.11.6",
    "requests>=2.32.3",
    "tqdm>=4.67.1",
    "more-itertools>=10.8.0",
    "simvue>=2.2.2",
    "pydantic>=2.11.9",
]

[project.urls]
homepage = "https://simvue.io"
repository = "https://github.com/simvue-io/simvue-cli"
documentation = "https://docs.simvue.io"

[project.scripts]
simvue = "simvue_cli.cli:simvue"

[tool.ruff]
lint.extend-select = ["C901"]
lint.mccabe.max-complexity = 11
extend-exclude = ["tests"]

[tool.pytest.ini_options]
addopts = "--no-cov"
testpaths = [
    "tests"
]
markers = [
  "unix: UNIX only tests"
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "faker>=37.8.0",
    "pytest-cov>=6.0.0",
    "pytest-xdist>=3.8.0",
    "pytest>=8.3.5",
]
docs = [
    "renku-sphinx-theme>=0.5.0",
    "sphinx>=8.1.3",
]
lint = [
    "ruff>=0.11.2",
]

[tool.mypy]
ignore_missing_imports = true
